clear date bug on pemeriksaan and tanggal lahir pasien

--- a/puskesmas_app/templates/puskesmas_app/datapemeriksaan_detail.html
+++ b/puskesmas_app/templates/puskesmas_app/datapemeriksaan_detail.html
@@ -25,7 +25,7 @@
                                 <li>Tanggal Upload      : {{ object.tanggal_upload}}</li>
                                 <li>Tanggal Revisi      : {{ object.tanggal_revisi}}</li>
                             </ul>
-                                <button class="btn btn-danger fa fa-times "> Delete</button>
+                                <a class="btn btn-danger fa fa-times " href="{{ object.get_absolute_url_delete }}"> Hapus</a>
                         </div>
                         <!-- /.panel-body -->
                     </div>
