--- a/puskesmas_app/templates/rekapitulasi_fr_htm.html
+++ b/puskesmas_app/templates/rekapitulasi_fr_htm.html
@@ -1,5 +1,17 @@
 {% extends 'base.html' %}
+{% load staticfiles %}
+
 {% block title %}Rekapitulasi Faktor Resiko{% endblock title %}
+
+{% block css %}
+
+<link href="{% static 'vendor/datatables-plugins/dataTables.bootstrap.css' %}" rel="stylesheet" />
+<link href="{% static 'vendor/datatables-responsive/dataTables.responsive.css' %}" rel="stylesheet" />
+
+
+{% endblock css %}
+
+
 {% block nav %}
     {% include 'snippets/nav.html' %}
 {% endblock nav %}
@@ -15,29 +27,90 @@
                 <!-- /.row -->
 
                 <!-- /.start-row2 -->
+                <!-- /.row -->
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="panel panel-default">
-                        <div class="panel-heading">
-                            Unggah Berkas
-                        </div>
-                        <div class="panel-body">
-                            <div class="form-group">
-                                <label>Pilih Berkas</label>
-                                <input type="file">
+                            <div class="panel-heading">
+                                <h3>Faktor Resiko PTM Tahun : 
+                                    <small><select ="2018">
+                                      <option type="submit" value="2015">2015</option>
+                                      <option type="submit" value="2016">2016</option>
+                                      <option type="submit" value="2017">2017</option>
+                                      <option type="submit" selected value="2018">2018</option>
+                                      <option type="submit" value="2019">2019</option>
+                                      <option type="submit" value="2020">2020</option>
+                                      <option type="submit" value="2021">2021</option>
+                                      </select>                   
+                                    </small> 
+                                </h3>
                             </div>
+                            
+                            
+                            
+                            
+                            <!-- /.panel-heading -->
+                            <div class="panel-body">
+                                <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
+                                    <thead>
+                                        <tr>
+                                            <th>No.</th>
+                                            <th>Jenis Faktor Resiko</th>
+                                            <th>Jumlah Kunjungan yang Beresiko</th>
+                                            <th>Jumlah yang Diperiksa</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for item in daftar_faktor_resiko %}
+                                        <tr class="item">
+                                            <td>{{forloop.counter}}</td>
+                                            <td>{{ item }}</td>
+                                            <td>....</td>
+                                            <td>....</td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+
+
+
+
+                            </div>
+                            <!-- /.panel-body -->
                         </div>
-                        <!-- /.panel-body -->
-                    </div>
-                    <!-- /.panel -->
+                        <!-- /.panel -->
                     </div>
                     <!-- /.col-lg-12 -->
                 </div>
+     
                 <!-- /.end-row2 -->
+                
+                
+                
             </div>
             <!-- /.container-fluid -->
         <!-- /#page-wrapper -->
 {%  endblock content %}
+
+
+{% block javascript %}
+<script src="{% static '/vendor/datatables/js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static '/vendor/datatables-plugins/dataTables.bootstrap.min.js' %}"></script>
+<script src="{% static '/vendor/datatables-responsive/dataTables.responsive.js' %}"></script>
+
+<script>
+$(document).ready(function() {
+    $('#dataTables-example').DataTable({
+        responsive: true
+    });
+});
+</script>
+
+
+{% endblock javascript %}
+
+
+
 {% block footer_inside %}
     {% include 'snippets/footer.html' %}
 {% endblock footer_inside %}
