deactivate signup link

--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -31,7 +31,7 @@ for a {{ site_name }} account and sign in below:{% endblocktrans %}</p>
 
 {% else %}
 <p>{% blocktrans %}If you have not created an account yet, then please
-<a href="{{ signup_url }}">sign up</a> first.{% endblocktrans %}, or back <a href="{%  url 'home' %}">Home</a></p>
+<a href="#">sign up</a> first.{% endblocktrans %}, or back <a href="{%  url 'home' %}">Home</a></p>
 
 {% endif %}
 {% endblock please_sign_in %}
