--- a/puskesmas_app/templates/import_data.html
+++ b/puskesmas_app/templates/import_data.html
@@ -128,7 +128,7 @@
             "order": [[ 3, 'desc' ]],
             "language": {
                 "lengthMenu": "Menampilkan _MENU_ entri per halaman",
-                "zeroRecords": "Kosong - maaf",
+                "zeroRecords": "Kosong",
                 "info": "Menampilkan halaman _PAGE_ of _PAGES_",
                 "infoEmpty": "Tidak ada entri tersedia",
                 "infoFiltered": "(disaring dari _MAX_ total entri)",
