--- a/templates/snippets/nav.html
+++ b/templates/snippets/nav.html
@@ -12,6 +12,14 @@
             <!-- /.navbar-header -->
 
             <ul class="nav navbar-top-links navbar-right">
+                <li class="dropdown">
+                    {% if petugas_puskesmas_instance %}
+                       {{ petugas_puskesmas_instance }}
+                    {% else %}
+                        {{ request.user  }}
+                    {% endif %}
+                    
+                </li>
                 <!-- /.dropdown -->
                 <!-- /.dropdown -->
                 <li class="dropdown">
@@ -19,6 +27,7 @@
                         <i class="fa fa-user fa-fw"></i> <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
+
                         <li>
                         {% if user.is_authenticated %}
                             <a href="#"><i class="fa fa-user fa-fw"></i>{{ request.user }} .. {{ request.user.first_name }} {{ request.user.last_name }}</a>
