fix selected dynamic with jquery

--- a/puskesmas_app/templates/rekapitulasi_fr_htm.html
+++ b/puskesmas_app/templates/rekapitulasi_fr_htm.html
@@ -34,17 +34,19 @@
                             <div class="panel-heading">
                             <form method="POST" id="form_faktor_resiko">
                                 {% csrf_token %}
+                                <div class="pilih_tahun">
                                 <h3>Faktor Resiko PTM Tahun :
-                                    <small><select ="2018" onchange="form_faktor_resiko.submit()">
+                                    <small><select ="{{ tahun }}" onchange="form_faktor_resiko.submit()" id="select_tahun" name="select_tahun">
                                       <option value="2015">2015</option>
                                       <option value="2016">2016</option>
                                       <option value="2017">2017</option>
-                                      <option selected value="2018">2018</option>
+                                      <option value="2018">2018</option>
                                       <option value="2019">2019</option>
                                       <option value="2020">2020</option>
                                       <option value="2021">2021</option>
                                     </small></select>                   
                                 </h3>
+                                </div>
                                 </form>
                             </div>
                             
@@ -105,6 +107,8 @@ $(document).ready(function() {
     $('#dataTables-example').DataTable({
         responsive: true
     });
+    
+    $("div.pilih_tahun select").val("{{ tahun }}");
 });
 </script>
 
