--- a/templates/base.html
+++ b/templates/base.html
@@ -20,8 +20,7 @@
     
     {% block css %}
     {% endblock css %}
-    
-    
+
     <!-- Custom CSS -->
     <link href="{% static 'dist/css/sb-admin-2.min.css'%}" rel="stylesheet" />
 
@@ -30,6 +29,7 @@
 
     <!-- Custom CSS -->
     <link href="{% static 'css/main.css'%}" rel="stylesheet" />
+    <link href="{% static 'css/datepicker.css'%}" rel="stylesheet" />
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -56,6 +56,7 @@
 
 <!-- Bootstrap Core JavaScript -->
 <script src="{% static 'vendor/bootstrap/js/bootstrap.min.js' %}"></script>
+<script src="{% static 'js/bootstrap-datepicker.js' %}"></script>
 
 <!-- Metis Menu Plugin JavaScript -->
 <script src="{% static 'vendor/metisMenu/metisMenu.min.js' %}"></script>
